--- a/me.hpcodecraft.npmupdateglobal.plist
+++ b/me.hpcodecraft.npmupdateglobal.plist
@@ -1,42 +1,34 @@
-<!-- Update globally installed npm modules -->
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>Label</key>
-  <string>me.hpcodecraft.npmupdateglobal</string>
-
-  <key>EnvironmentVariables</key>
-  <dict>
-    <key>PATH</key>
-    <string>/usr/local/bin/:$PATH</string>
-  </dict>
-
-  <key>ProgramArguments</key>
-  <array>
-    <string>/usr/local/bin/npm</string>
-    <string>update</string>
-    <string>-g</string>
-  </array>
-
-  <key>Nice</key>
-  <integer>1</integer>
-
-  <key>StartCalendarInterval</key>
-  <dict>
-      <key>Minute</key>
-      <integer>15</integer>
-      <key>Hour</key>
-      <integer>12</integer>
-  </dict>
-
-  <key>RunAtLoad</key>
-  <true/>
-
-  <key>StandardErrorPath</key>
-  <string>/tmp/npmupdateglobal.err</string>
-
-  <key>StandardOutPath</key>
-  <string>/tmp/npmupdateglobal.log</string>
+	<key>EnvironmentVariables</key>
+	<dict>
+		<key>PATH</key>
+		<string>/usr/local/bin/</string>
+	</dict>
+	<key>Label</key>
+	<string>me.hpcodecraft.npmupdateglobal</string>
+	<key>Nice</key>
+	<integer>1</integer>
+	<key>ProgramArguments</key>
+	<array>
+		<string>/usr/local/bin/npm</string>
+		<string>update</string>
+		<string>-g</string>
+	</array>
+	<key>RunAtLoad</key>
+	<true/>
+	<key>StandardErrorPath</key>
+	<string>/tmp/npmupdateglobal.err</string>
+	<key>StandardOutPath</key>
+	<string>/tmp/npmupdateglobal.log</string>
+	<key>StartCalendarInterval</key>
+	<dict>
+		<key>Hour</key>
+		<integer>12</integer>
+		<key>Minute</key>
+		<integer>15</integer>
+	</dict>
 </dict>
 </plist>
